<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="contract"
            type="dev.forcetower.cubicrectangle.view.search.SearchContract.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:paddingTopSystemWindowInsets="@{true}"
            style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:contentDescription="@string/cancel_search"
                    android:tint="?attr/colorOnSurface"
                    android:onClick="@{() -> contract.onNavigateBack()}"
                    style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageButton
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/ic_outline_close_24"
                    android:contentDescription="@string/clear_search"
                    android:tint="?attr/colorOnSurface"
                    android:onClick="@{() -> contract.onClearSearch()}"
                    style="@style/Widget.AppCompat.ButtonBar.AlertDialog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    android:id="@+id/edit_query"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:singleLine="true"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete|textAutoCorrect"
                    android:hint="@string/search_movies"
                    app:layout_constraintStart_toEndOf="@id/btn_back"
                    app:layout_constraintEnd_toStartOf="@id/btn_clear"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:clipToPadding="false"
                app:paddingBottomSystemWindowInsets="@{true}"
                app:paddingStartSystemWindowInsets="@{true}"
                app:paddingEndSystemWindowInsets="@{true}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="@integer/fragment_listing_span_count"
                tools:listitem="@layout/item_movie"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/label_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_data"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/label_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_error"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>