...
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_logo_name_start"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageButton
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:src="@drawable/ic_search_24dp"
                    android:tint="?attr/colorOnSurface"
                    android:contentDescription="@string/nav_search"
...
                app:tabIndicatorColor="?attr/colorPrimary"
                app:tabTextAppearance="@style/Release.Widget.TabLayout.TextAppearance"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager_genres"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
