...
    <data>
        <variable
            name="contract"
            type="dev.forcetower.cubicrectangle.view.common.MovieClickableContract.View" />

        <variable
            name="movie"
            type="dev.forcetower.cubicrectangle.model.database.Movie" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> contract.onMovieClick(movie)}"
...
